--- a/flashcard.yml
+++ b/flashcard.yml
@@ -14,3 +14,21 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: false
+  kafka:
+    consumer:
+      bootstrap-servers:
+      - localhost:9092
+      group-id: group-id
+      auto-offset-reset: earliest
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+    producer:
+      bootstrap-servers:
+      - localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
